<resources>
    <string name="app_name">Unifiller DRA</string>
    <string name="action_settings">Settings</string>
    <string name="main_page">Device Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_enter_your_information">Please enter your information.</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">Search</string>
    <string name="device_1">Device 1</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="device_registration">DEVICE REGISTRATION</string>
    <string name="unregisteredRecyclerView">unregisteredRecyclerView</string>
    <string name="registeredRecyclerView">registeredRecyclerView</string>
    <string name="registeredTextView">registeredRecyclerView</string>
    <string name="unregisteredTextView">unregisteredRecyclerView</string>
    <string name="enter_machine_serial_number">Enter machine serial number</string>
    <string name="cycle_counter_mac">MAC Address:</string>
    <string name="associate">Associate</string>
    <string name="go_back">Associate</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="hide">Show/Hide ActionBar when scroll</string>
    <string name="paralax">ActionBar Parallax Animations</string>
    <string name="serial_number_instructions">Your machine\'s serial number is an alphanumeric code usually written on the faceplace of the machine.</string>
    <string name="already_registered">Already registered?</string>
    <string name="e_mail">E-mail</string>
    <string name="green_circle">green circle</string>
</resources>
