<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SerialNumberActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat"/>

    <EditText
        android:id="@+id/enterSerialEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".25"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textCapCharacters"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:textColor="@color/offWhite"
        android:textSize="22sp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:hint="@string/enter_machine_serial_number"
        android:textColorHint="@color/offWhite"
        android:gravity="center"
        android:autofillHints=""
        android:backgroundTint="@color/offWhite"
        android:drawableLeft="@drawable/ic_kitchen_black_24dp"
        android:drawablePadding="5dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/ccdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/enterSerialEditText"
        app:layout_constraintBottom_toTopOf="@id/serialNumberButton"
        app:layout_constraintVertical_bias=".025"
        android:text="@string/cycle_counter_mac"
        android:textColor="@color/offWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/macAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ccdTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/enterSerialEditText"
        app:layout_constraintBottom_toTopOf="@id/serialNumberButton"
        app:layout_constraintVertical_bias=".025"
        android:textColor="@color/offWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/macAddressTextView"
        app:layout_constraintBottom_toTopOf="@id/serialNumberButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/serial_number_instructions"
        android:textSize="18sp"
        android:textColor="@color/lightGrey"
        android:textStyle="normal"
        android:textAlignment="center"
        android:fontFamily="monospace" />

    <Button
        android:id="@+id/serialNumberButton"
        android:onClick="serialNumberClick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_ombre_red"
        android:text="@string/associate"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/offWhite"/>


</androidx.constraintlayout.widget.ConstraintLayout>