<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:id="@+id/parent_layout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/image"
        android:src="@mipmap/ic_bluetooth_device"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/crimsonRed"/>

    <TextView
        android:id="@+id/imageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:text="@string/device_1"
        android:textColor="@color/offWhite"
        android:textStyle="bold"
        android:textSize="16sp"/>

</RelativeLayout>

