<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bluetoothSearchMenuItem"
        android:icon="@drawable/ic_bluetooth_white_24dp"
        android:title="Bluetooth"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item2"
        android:title="Item 2"
        app:showAsAction="never">

        <menu>

                <item android:id="@+id/subitem2_1"
                    android:title="Sub Item 1"/>

                <item android:id="@+id/subitem2_2"
                    android:title="Sub Item 2"/>

                <item android:id="@+id/subitem2_3"
                    android:title="Sub Item 3"/>

        </menu>
    </item>

    <item android:id="@+id/item3"
        android:title="Item 3"
        app:showAsAction="never">

        <menu>

            <item android:id="@+id/subitem3_1"
                android:title="Sub Item 1"/>

            <item android:id="@+id/subitem3_2"
                android:title="Sub Item 2"/>

            <item android:id="@+id/subitem3_3"
                android:title="Sub Item 3"/>

        </menu>
    </item>
</menu>